Remove table display to fix Chrome alignment issues

--- a/assets/sass/compiled-dev.css
+++ b/assets/sass/compiled-dev.css
@@ -44,7 +44,7 @@
     .file .side .line {
       border-top: 1px solid #eeeeee; }
     .file .side .line code {
-      height: 1.2em;
+      height: 15px;
       display: block;
       white-space: pre; }
     .file .side .diff-content {
@@ -53,7 +53,6 @@
       width: 100%; }
       .file .side .diff-content .diff-line {
         padding-left: 2px;
-        display: table;
         width: 100%;
         box-sizing: border-box; }
       .file .side .diff-content .diff-line-deleted {
